# embed

./: CMakeLists.txt  README.md
.github/workflows/: update.yml
cmake/: cpm.cmake  embed.cmake
data/: mimes.txt
src/: main.cpp
